<resources>
    <string name="app_name">Quick Quest</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3138315103708543/9964446396</string>
    <string name="title_home">Home</string>
    <string name="a11y_category_item_image">Picture of category</string>
    <string name="questions">Questions:</string>
    <string name="slash">/</string>
    <string name="title_questions">Question</string>
    <string name="_50">50</string>
    <string name="finish">Finish</string>
    <string name="mark">Mark</string>
    <string name="review">Review</string>
    <string name="retry">Retry</string>
    <string name="share_score">Share Score</string>
    <string name="marked_questions">Marked questions</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="true_false">True / False</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="select_type">Select Type:</string>
    <string name="select_difficulty">Select Difficulty:</string>
    <string name="trivia_api">Trivia API</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="select_category">Select Category:</string>
    <string name="submit">Submit</string>
    <string name="arch_content"><![CDATA[<a href="https://en.wikipedia.org/wiki/Apple">MVVM</a> is the design pattern used for making this app.]]></string>
    <string name="purpose"><![CDATA[Quick Quest is implemented in <a href="https://kotlinlang.org/">Kotlin</a> (for learning purposes) by <a href="https://www.facebook.com/yeahush">Anh Tu Do</a>]]></string>
    <string name="source"><![CDATA[The source code is available on <a href="https://github.com/d04nhtu/quick_quest">GitHub</a>.]]></string>
    <string name="intro"><![CDATA[The app is consist of two sources of questions. One is populated from <a href="https://github.com/d04nhtu/quick_quest/blob/master/app/src/main/assets/questions.json">a local json file</a>, questions may not match the category. The other is pulled from <a href="https://opentdb.com/api_config.php">Trivia API</a> over the Internet.]]></string>
    <string name="term_title">Term &amp; Policies</string>
    <string name="term_content">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed dolor risus, aliquet a erat quis, viverra molestie orci. Suspendisse vehicula porta libero. Nam tincidunt nulla ipsum, vel iaculis risus scelerisque sed. Phasellus venenatis, enim vel placerat blandit, leo eros bibendum erat, at auctor mauris diam ac risus. Aenean sit amet congue neque, sit amet condimentum elit. Fusce lacinia massa vel nisl scelerisque, in scelerisque dolor elementum. Vivamus leo enim, congue dictum congue vitae, porttitor id purus. Sed eu ultricies erat. Morbi hendrerit, mi ac volutpat commodo, magna turpis pretium nibh, at fringilla eros lorem quis tellus. Praesent porttitor purus nibh, ac vestibulum massa fringilla vel. Pellentesque dapibus nulla quis luctus dictum. In scelerisque ut ex sed facilisis. Nunc eu finibus nulla, ut hendrerit sem. Suspendisse accumsan risus vel diam fringilla iaculis.
        \n\nQuisque facilisis finibus aliquam. Sed mattis, dui fringilla ornare finibus, orci odio blandit risus, ut maximus dui odio non leo. Donec laoreet lacus nisi, a mollis velit suscipit ac. Quisque faucibus ut nisl in congue. Nam sagittis consectetur tempus. Suspendisse eget posuere dui. Donec ultricies velit ex, vel cursus odio sollicitudin in. Nullam faucibus auctor ligula, eu rhoncus dui facilisis a. Curabitur vel feugiat est. Quisque congue at enim eleifend ultrices. Proin dapibus risus lorem, nec condimentum nunc consequat vitae. Quisque sapien lorem, vestibulum vitae justo eget, fringilla eleifend nisi.
        \n\nMauris ultricies augue sit amet est sollicitudin laoreet. Fusce ut congue felis. Fusce dictum tristique elit nec iaculis. Mauris sodales tempus fringilla. Fusce nec nunc tempus, tempor sapien sit amet, ultricies erat. Mauris ultrices ac lorem ultrices facilisis. Nam pharetra, nisi a imperdiet interdum, nunc justo ultricies nisl, a laoreet massa dui vel enim. Pellentesque et magna ac tellus ullamcorper malesuada a ac nisl. Curabitur id est et neque convallis accumsan. Aliquam eleifend varius massa. Curabitur eu finibus tortor.
        \n\nVivamus aliquam nisl rutrum orci volutpat porta in ornare est. Quisque ligula ipsum, vulputate id aliquam vitae, semper vitae orci. Nam non pulvinar ligula, eget tincidunt ante. Quisque sapien massa, varius tempus pretium id, vehicula at magna. Ut ut ultrices augue. Nam nec ullamcorper tellus, at finibus lectus. Fusce vel iaculis mauris, id porta nulla. Aenean ac mollis sapien. Morbi imperdiet augue tempus nulla luctus, sit amet feugiat purus elementum.
    </string>
    <string name="libraries_used">Libraries used:</string>
    <string name="about_title">About</string>
    <string name="contact_title">Contact me</string>
    <string name="developer_email">yeahush@gmail.com</string>
    <string name="others_header">Others</string>
    <string name="general_header">General</string>
    <string name="title_settings">Settings</string>
    <string name="signature_title">Your signature</string>
    <string name="vibrate_title">Vibrate</string>
    <string name="sound_title">Sound</string>
    <string name="bg_music_title">Background Music</string>
    <string name="rating">Rating</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="your_result">Your result: </string>
    <string name="logo_of_trivia_api">Logo of Trivia Api</string>
    <string name="check_internet">Please check your internet connection!</string>
    <string name="choose_other_category">There is a problem in the server. Please choose other category!</string>
    <string name="skip">Skip</string>
    <string name="let_s_play">Let\'s play</string>
    <string name="out_of_bounds">Your input is invalid, questions are from 1 to 50.</string>
    <string name="jump_to">Jump to…</string>
    <string name="input_number">Please input number in [1, 50]!</string>
    <string name="library_image">Library image</string>
</resources>