<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/general_header">
        <EditTextPreference
            app:key="@string/signature_title"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/sound_title"
            app:title="@string/sound_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/bg_music_title"
            app:title="@string/bg_music_title" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/vibrate_title"
            app:title="@string/vibrate_title" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/others_header">
        <Preference
            app:key="@string/contact_title"
            app:summary="@string/developer_email"
            app:title="@string/contact_title" />

        <Preference
            app:key="@string/term_title"
            app:title="@string/term_title" />

        <Preference
            app:key="@string/about_title"
            app:title="@string/about_title" />
    </PreferenceCategory>
</PreferenceScreen>