<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="question"
            type="com.yeahush.quickquest.data.local.model.Question" />

        <variable
            name="isFinished"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        tools:background="@tools:sample/backgrounds/scenic">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginBottom="@dimen/margin_small"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questions"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/question_ordinal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_small"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    tools:text="15" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_small"
                    android:text="@string/_50"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <Button
                android:id="@+id/mark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_mark_button"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:onClick="@{clickListener}"
                android:paddingStart="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_small"
                android:paddingEnd="@dimen/margin_normal"
                android:paddingBottom="@dimen/margin_small"
                android:text="@string/mark"
                android:textAllCaps="false"
                android:visibility="@{isFinished ? View.INVISIBLE : View.VISIBLE}" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_normal"
            android:layout_marginEnd="@dimen/margin_normal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:gravity="center"
                    android:text="@{question.question}"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/primary_text_dark"
                    tools:text="Who are you?" />

                <Button
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_extra_small"
                    android:background="@drawable/bg_option"
                    android:enabled="@{!isFinished}"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:text="@{question.optionA}"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    tools:text="A" />

                <Button
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_extra_small"
                    android:background="@drawable/bg_option"
                    android:enabled="@{!isFinished}"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:text="@{question.optionB}"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    tools:text="B" />

                <Button
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:layout_marginBottom="@dimen/margin_extra_small"
                    android:background="@drawable/bg_option"
                    android:enabled="@{!isFinished}"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:text="@{question.optionC}"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    tools:text="C" />

                <Button
                    android:id="@+id/optionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:background="@drawable/bg_option"
                    android:enabled="@{!isFinished}"
                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:text="@{question.optionD}"
                    android:textAllCaps="false"
                    android:textAppearance="?android:attr/textAppearanceListItem"
                    android:textColor="@android:color/white"
                    tools:text="D" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>